...

export async function testDisplayNotification(channel: string = 'callout') {
  // storeSoundForChannel(channel, "radio_alert-standard");
  const remoteMessage = {
    data: {
      title: channel,
      body: 'test message',
      channel,
    },
  };
  displayNotification(remoteMessage);
}

...
