appId: org.malibusar.app
---
- evalScript: '${output.new_log_count = (Number.parseInt(INITIAL_LOG_COUNT)+1).toFixed(0)}'

- tapOn: Log.*
- assertVisible: Message...
- runFlow:
    when:
      platform: Android
    commands:
      - assertVisible:
          id: Log-badge
          text: ${INITIAL_LOG_COUNT}
      - assertNotVisible:
          id: Log-badge
          text: ${output.new_log_count}
- tapOn: Message...
- inputText: test message
- tapOn:
    id: sendButton
- assertVisible: test message
- assertVisible: Message...
- runFlow:
    when:
      platform: Android
    commands:
      - assertVisible:
          id: Log-badge
          text: ${output.new_log_count}
      - tapOn: Response.*
      - assertVisible:
          id: Log-badge
          text: ${output.new_log_count}
- tapOn: Log.*
- assertVisible: test message
- assertVisible: Message...
- tapOn: Info
